registry/components/fission/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fission
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
