registry/components/fission/ingress.yaml
# Not yet enabled as no functions yet
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fission
  namespace: fission
  annotations:
    argocd.argoproj.io/sync-wave: "20"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: fission.simonemms.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router
                port:
                  number: 80
  tls:
    - hosts:
        - fission.simonemms.com
      secretName: fission-tls
